# rag-production-app

./: .gitignore  README.md  conftest.py  custom_types.py  data_loader.py  main.py  pyproject.toml  reranker.py  streamlit_app.py  validators.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/4d571eee-82eb-4af3-8dd6-b1d0df61108e/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/52dc07aa-b505-4021-935b-805037778189/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/854341b7-4e1d-43ff-b094-13b188d358db/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/docs/0/segments/abc23421-c9e1-473b-a1c8-ca269837423b/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/docs/0/segments/aea79424-2834-4dbb-b835-c6ff846ae2fa/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/d24f05cf-4eda-4601-9ece-15281e78bc9f/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
tests/: test_pipeline.py  test_rag_app.py  test_streamlit_rag.py  test_validation.py
tests/tests/: test_chunking.py  test_embedding.py
